sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value temp
    temp= getValue(i)
    ^AlgInsertionSort:5: error: not found: value k
    k=0
    ^AlgInsertionSort:7: error: not found: value temp
      if (getValue(i-j)<temp){
                        ^AlgInsertionSort:9: error: not found: value k
        k=j
        ^AlgInsertionSort:11: error: not found: value k
     copy(k,i)
          ^